--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,17 +3,5 @@ name = "saaq-qa-assistant"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "jsonlines>=4.0.0",
-    "langchain>=1.2.0",
-    "langchain-huggingface>=1.2.0",
-    "langdetect>=1.0.9",
-    "pandas>=2.3.3",
-    "pathlib>=1.0.1",
-    "pypdf>=6.5.0",
-    "python-dotenv>=1.2.1",
-    "requests>=2.32.5",
-    "tqdm>=4.67.1",
-    "weaviate-client>=4.19.0",
-]
+requires-python = ">=3.11"
+dependencies = []
