--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -12,6 +12,42 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
+  # Phoenix UI (served under /phoenix/)
+  location /phoenix/ {
+    proxy_pass http://phoenix:6006/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # Phoenix static assets (Phoenix uses absolute /assets and /graphql paths)
+  location /assets/ {
+    proxy_pass http://phoenix:6006;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location /graphql {
+    proxy_pass http://phoenix:6006;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location = /modernizr.js {
+    proxy_pass http://phoenix:6006;
+    proxy_set_header Host $host;
+  }
+
+  location = /favicon.ico {
+    proxy_pass http://phoenix:6006;
+    proxy_set_header Host $host;
+  }
+
   # Streamlit UI
   location / {
     proxy_pass http://frontend:8501;
