--- a/requirements.in
+++ b/requirements.in
@@ -21,6 +21,14 @@ langchain-community
 langchain-text-splitters
 langchain-huggingface
 
+# Observability
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-requests
+opentelemetry-exporter-otlp-proto-grpc
+
 # Evaluation (RAGAS) + optional OpenAI backend for metrics
 ragas
 openai
