--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,8 @@ anyio==4.12.1
     #   watchfiles
 appdirs==1.4.4
     # via ragas
+asgiref==3.11.0
+    # via opentelemetry-instrumentation-asgi
 attrs==25.4.0
     # via
     #   aiohttp
@@ -98,10 +100,16 @@ gitdb==4.0.12
     # via gitpython
 gitpython==3.1.46
     # via streamlit
+googleapis-common-protos==1.72.0
+    # via
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
 greenlet==3.3.0
     # via sqlalchemy
 grpcio==1.76.0
-    # via weaviate-client
+    # via
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   weaviate-client
 h11==0.16.0
     # via
     #   httpcore
@@ -136,6 +144,8 @@ idna==3.11
     #   httpx
     #   requests
     #   yarl
+importlib-metadata==8.7.1
+    # via opentelemetry-api
 iniconfig==2.3.0
     # via pytest
 instructor==1.14.4
@@ -245,6 +255,62 @@ openai==2.15.0
     #   instructor
     #   langchain-openai
     #   ragas
+opentelemetry-api==1.39.1
+    # via
+    #   -r requirements.in
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+    #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-asgi
+    #   opentelemetry-instrumentation-fastapi
+    #   opentelemetry-instrumentation-requests
+    #   opentelemetry-sdk
+    #   opentelemetry-semantic-conventions
+opentelemetry-exporter-otlp==1.39.1
+    # via -r requirements.in
+opentelemetry-exporter-otlp-proto-common==1.39.1
+    # via
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+opentelemetry-exporter-otlp-proto-grpc==1.39.1
+    # via
+    #   -r requirements.in
+    #   opentelemetry-exporter-otlp
+opentelemetry-exporter-otlp-proto-http==1.39.1
+    # via opentelemetry-exporter-otlp
+opentelemetry-instrumentation==0.60b1
+    # via
+    #   opentelemetry-instrumentation-asgi
+    #   opentelemetry-instrumentation-fastapi
+    #   opentelemetry-instrumentation-requests
+opentelemetry-instrumentation-asgi==0.60b1
+    # via opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-fastapi==0.60b1
+    # via -r requirements.in
+opentelemetry-instrumentation-requests==0.60b1
+    # via -r requirements.in
+opentelemetry-proto==1.39.1
+    # via
+    #   opentelemetry-exporter-otlp-proto-common
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+opentelemetry-sdk==1.39.1
+    # via
+    #   -r requirements.in
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+opentelemetry-semantic-conventions==0.60b1
+    # via
+    #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-asgi
+    #   opentelemetry-instrumentation-fastapi
+    #   opentelemetry-instrumentation-requests
+    #   opentelemetry-sdk
+opentelemetry-util-http==0.60b1
+    # via
+    #   opentelemetry-instrumentation-asgi
+    #   opentelemetry-instrumentation-fastapi
+    #   opentelemetry-instrumentation-requests
 orjson==3.11.5
     # via
     #   langgraph-sdk
@@ -260,6 +326,7 @@ packaging==25.0
     #   langchain-core
     #   langsmith
     #   marshmallow
+    #   opentelemetry-instrumentation
     #   pytest
     #   streamlit
 pandas==2.3.3
@@ -283,6 +350,8 @@ propcache==0.4.1
     #   yarl
 protobuf==6.33.4
     # via
+    #   googleapis-common-protos
+    #   opentelemetry-proto
     #   streamlit
     #   weaviate-client
 pyarrow==23.0.0
@@ -359,6 +428,7 @@ requests==2.32.5
     #   langchain-classic
     #   langchain-community
     #   langsmith
+    #   opentelemetry-exporter-otlp-proto-http
     #   requests-toolbelt
     #   streamlit
     #   tiktoken
@@ -434,6 +504,11 @@ typing-extensions==4.15.0
     #   huggingface-hub
     #   langchain-core
     #   openai
+    #   opentelemetry-api
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+    #   opentelemetry-sdk
+    #   opentelemetry-semantic-conventions
     #   pydantic
     #   pydantic-core
     #   referencing
@@ -475,11 +550,15 @@ websockets==16.0
     # via
     #   firecrawl-py
     #   uvicorn
+wrapt==1.17.3
+    # via opentelemetry-instrumentation
 xxhash==3.6.0
     # via
     #   datasets
     #   langgraph
 yarl==1.22.0
     # via aiohttp
+zipp==3.23.0
+    # via importlib-metadata
 zstandard==0.25.0
     # via langsmith
